// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render image 1`] = `
<div class="ms-image-preview" name="ms-fade">
  <div class="ms-image-preview__index">
    1/3
  </div>
  <div class="ms-swipe">
    <div class="ms-swipe__track" style="width: 0px; transform: translateX(0px);">
      <div class="ms-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/1.png" class="ms-image-preview__image"></div>
      <div class="ms-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/2.png" class="ms-image-preview__image"></div>
      <div class="ms-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/3.png" class="ms-image-preview__image"></div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`zoom 1`] = `
<div class="ms-image-preview" name="ms-fade">
  <div class="ms-image-preview__index">
    1/3
  </div>
  <div class="ms-swipe">
    <div class="ms-swipe__track" style="width: 300px; transform: translateX(0px);">
      <div class="ms-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/1.png" class="ms-image-preview__image" style="transform: scale3d(2, 2, 1) translate(0px, NaNpx);"></div>
      <div class="ms-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/2.png" class="ms-image-preview__image"></div>
      <div class="ms-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/3.png" class="ms-image-preview__image"></div>
    </div>
    <!---->
  </div>
</div>
`;
